fixed buttons alignment

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -166,3 +166,7 @@ h2 {
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
     background-color: #3d4c64;
 }
+
+.custom-edit{
+    text-align: center;
+}
